--- a/Heart_Beat_Classification_Example.ipynb
+++ b/Heart_Beat_Classification_Example.ipynb
@@ -376,11 +376,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
-        "outputId": "8b296b73-c828-4a15-f75c-b6e87f058890"
+        "outputId": "e56f256c-5733-4d85-c781-9a574dbe7335"
       },
       "cell_type": "code",
       "source": [
         "# lets listen to an artifact lol\n",
+        "# wont work on github but you can just open in google collab to check it out\n",
         "from IPython.display import Audio\n",
         "from scipy.io import wavfile\n",
         "\n",
@@ -388,7 +389,7 @@
         "test_rate, test_data = wavfile.read(testfile)\n",
         "Audio(test_data, rate=test_rate)"
       ],
-      "execution_count": 80,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +409,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 81
         }
       ]
     },
